# zkp-set-membership

./: .gitignore  CIRCUIT_ARCHITECTURE.md  CIRCUIT_VISUALIZATION.md  CODE_REVIEW.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_CURRENT.md  CODE_REVIEW_FEB_11_2026.md  CODE_REVIEW_FEB_15_2026.md  CODE_REVIEW_FRESH.md  CODE_REVIEW_JAN_2026.md  CODE_REVIEW_JAN_2026_FINAL.md  CODE_REVIEW_JAN_28_2026.md  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_UPDATED.md  Cargo.toml  MERKLE_PATH_VERIFICATION.md  README.md  SECURITY.md  TESTING.md  TEST_SUMMARY.md  integration_test.sh  run_tests.sh  test_nullifier.rs
benches/: proof_benchmarks.rs
src/: circuit.rs  config.rs  ethereum.rs  lib.rs  merkle.rs  merkle_tests.rs  types.rs  utils.rs
tests/: circuit_tests.rs  create_test_accounts.rs  integration_test.rs
