[package]
name = "zkp-set-membership"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof for Ethereum account set membership using Halo2 and Merkle trees"
license = "MIT"
repository = "https://github.com/example/zkp-set-membership"
keywords = ["zero-knowledge", "cryptography", "ethereum", "merkle-tree", "halo2"]
categories = ["cryptography", "authentication"]

[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[[bin]]
name = "generate_accounts"
path = "src/bin/generate_accounts.rs"

[dependencies]
halo2_proofs = "0.3"
pasta_curves = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
ethers = "2.0"
anyhow = "1.0"
rand = "0.8"
halo2_gadgets = "0.3"
log = "0.4"
env_logger = "0.10"
rpassword = "7.3"

[dev-dependencies]
halo2_proofs = { version = "0.3", features = ["dev-graph", "sanity-checks"] }
tempfile = "3.8"
criterion = "0.5"
sha3 = "0.10"
